Fix for panel not appearing because of elements with greater z-index in front of it.

--- a/package/blognav.css
+++ b/package/blognav.css
@@ -4,6 +4,7 @@
     margin: 0px;
     padding: 0px;
     border: 2px solid;
+    z-index: 9999;	/* force to front */
 }
 
 /* div positioning */
